// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders status of long-living branches 1`] = `
<Level
  level="OK"
  small={true}
/>
`;

exports[`renders status of long-living branches 2`] = `
<Level
  level="ERROR"
  small={true}
/>
`;

exports[`renders status of short-living branches 1`] = `
<ul
  className="branch-status"
>
  <li
    className="spacer-right"
  >
    <StatusIndicator
      color="green"
      size="small"
    />
  </li>
  <li
    className="spacer-left"
  >
    0
    <BugIcon />
  </li>
  <li
    className="spacer-left"
  >
    0
    <VulnerabilityIcon />
  </li>
  <li
    className="spacer-left"
  >
    0
    <CodeSmellIcon />
  </li>
</ul>
`;

exports[`renders status of short-living branches 2`] = `
<ul
  className="branch-status"
>
  <li
    className="spacer-right"
  >
    <StatusIndicator
      color="red"
      size="small"
    />
  </li>
  <li
    className="spacer-left"
  >
    0
    <BugIcon />
  </li>
  <li
    className="spacer-left"
  >
    0
    <VulnerabilityIcon />
  </li>
  <li
    className="spacer-left"
  >
    1
    <CodeSmellIcon />
  </li>
</ul>
`;

exports[`renders status of short-living branches 3`] = `
<ul
  className="branch-status"
>
  <li
    className="spacer-right"
  >
    <StatusIndicator
      color="red"
      size="small"
    />
  </li>
  <li
    className="spacer-left"
  >
    7
    <BugIcon />
  </li>
  <li
    className="spacer-left"
  >
    6
    <VulnerabilityIcon />
  </li>
  <li
    className="spacer-left"
  >
    3
    <CodeSmellIcon />
  </li>
</ul>
`;
